--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#">Anime</a>
             <div class="nav_bar">
                 <ul>
-                    <li><a href="Anime.html">Басты бет</a></li>
+                    <li><a href="index.html">Басты бет</a></li>
                     <li><a href="vidoanime.html">Жын Жоюшы</a></li>
                     <li><a href="вап пис.html">Ван Пис</a></li>
                     <li><a href="Titanik.html">Титандарға шабуыл</a></li>
